--- a/style.css
+++ b/style.css
@@ -15,7 +15,11 @@
   --hero: #ffffff;
   /* jumbotron/hero bg */
 }
-
+.carousel-img {
+  max-height: 700px;   /* controls height */
+  width: auto;         /* adjusts width automatically */
+  object-fit: cover;   /* crops evenly if image is larger */
+}
 /* =============================
    Do not edit below
    ============================= */
